<resources>
    <string name="app_name">MobileDevelopment</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">password</string>
    <string name="Email" />
    <string name="Password" />
    <string name="MobileDevelopment" />
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="email" />
    <string name="wellcome">Wellcome</string>
    <string name="name">name</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="failure">Failure!</string>
    <string name="success">Success Authorisation</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="show_messg_invalid_email_address">Invalid email address</string>
    <string name="show_messg_registered_user_err">This user is already registread</string>
    <string name="show_messg_required_email">Email is required</string>
    <string name="required_password">Password is required</string>
    <string name="show_messg_required_name">User name is required</string>
    <string name="show_messg_required_phone">Phone number is required</string>
    <string name="show_messg_wrong_phone">Wrong phone number</string>
    <string name="show_messg_passw_error">Minimim length of password should be 8</string>
    <string name="success_sign_in">Successfully signed in with: </string>
    <string name="success_sign_out">Successfully signed out.</string>
    <string name="data_saved">Data is saved successfully</string>
    <string name="invalid_email_addr">Invalid email address</string>
    <string name="weak_password">need 8 characters</string>
    <string name="icon">Icon</string>
    <string name="icon_2">Icon</string>
    <string name="monday">Monday</string>
    <string name="movies">Movies</string>
    <string name="tab2">Tab2</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laxman_marothiya">Laxman Marothiya</string>
    <string name="surat">Surat</string>
    <string name="adhyaksh">(Adhyaksh)</string>
    <string name="todo">TODO</string>
    <string name="enter_name">Enter Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_email">New email</string>
    <string name="user_avatar">user avatar</string>
    <string name="new_username">New user name</string>
    <string name="load_button">Load Image</string>
    <string name="edit_button">save email</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="img_load_succes">image load Success</string>
    <string name="email_update_s">Email update Success</string>
    <string name="email_update_fail">Email update Failure</string>
    <string name="invalid_new_email">invalid email</string>
    <string name="invalid_name">invalid user name</string>
    <string name="user_name_update_success">User name Update Success</string>
    <string name="user_name_update_fail">User name Update Failure</string>
</resources>
