<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/fragment_profile_user_avatar_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/user_avatar" />

    <Button
        android:id="@+id/fragment_profile_load_user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_button" />

    <TextView
        android:id="@+id/fragment_profile_username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/fragment_profile_email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_profile_edit_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_profile_edit_username_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_profile_edit_username_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_profile_edit_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_profile_edit_email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_profile_edit_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:textColor="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/fragment_profile_sign_out_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_out_btn"/>
    </RelativeLayout>

</LinearLayout>