<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="250dp"
    android:paddingRight="24dp"
    android:textColor="@color/white">

    <EditText
        android:id="@+id/sing_up_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="name"
        android:textColorHint="@color/white"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/sign_up_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="phone number"
        android:textColorHint="@color/white"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/sign_up_email"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="email"
        tools:ignore="Autofill,HardcodedText"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/colorPrimaryDark"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/buttn_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_view_sing_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/already_have_an_account_login"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@color/colorAccent" />




</LinearLayout>